# GreenPollAPI

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  run.bat  run.sh
emails/: password_reset.html  password_reset.txt  verify.html  verify.txt
sql/: addMessage.sql  getMessage.sql  init.sql
sql/init/: password_reset.sql  poll.sql  poll_option.sql  poll_vote.sql  session.sql  user.sql  verify.sql
sql/password_reset/: create_password_reset.sql  delete_password_reset.sql  get_password_reset.sql  get_password_reset_by_email.sql  get_user_by_password_reset_id.sql  prune_password_resets.sql
sql/poll/: create_poll.sql  delete_poll.sql  get_poll.sql  get_poll_options.sql  get_poll_user_votes.sql  get_poll_votes.sql  set_description.sql  set_title.sql
sql/poll_option/: create_poll_option.sql  delete_poll_option.sql  get_poll_option.sql  get_poll_option_poll.sql  set_poll_option_value.sql
sql/poll_vote/: get_poll_vote.sql  get_poll_vote_by_vote_id.sql  get_poll_vote_poll.sql  unvote.sql  unvote_by_poll_option_id.sql  vote.sql
sql/session/: create_session.sql  delete_old_user_sessions.sql  delete_user_sessions.sql  get_session.sql  get_user_by_session_id.sql  get_user_sessions.sql
sql/user/: create_user.sql  delete_user.sql  get_user.sql  get_user_by_email.sql  get_user_by_username.sql  get_user_polls.sql  prune_unverified_users.sql  set_email.sql  set_password.sql  set_username.sql  set_verified.sql
sql/verify/: create_verification.sql  delete_verification.sql  get_user_by_verify_id.sql  (+3 more)
src/: db.rs  dbinit.rs  emailer.rs  main.rs  util.rs
(+16 files in other folders)
