[package]
name = "greenpoll-api"
version = "0.1.0"
authors = ["WKHAllen <wkhallen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.125"
tokio = { version = "1.5.0", features = ["full"] }
tokio-postgres = "0.7.2"
