[package]
name = "greenpoll-api"
version = "0.1.0"
authors = ["WKHAllen <wkhallen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "*"
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls", "postgres", "time" ] }
bcrypt = "0.8"
lettre = "0.9"
lettre_email = "0.9"
